# gloss

./: CMakeLists.txt  LICENSE
src/: Makefile  alerts.cpp  alerts.hpp  main.cpp
src/lexer/: lexer.cpp  lexer.hpp  token.cpp  token.hpp
src/parser/: environment.cpp  environment.hpp  interpreter.cpp  interpreter.hpp  parser.cpp  parser.hpp
src/parser/ASTs/: ExprAST.hpp  StmtAST.hpp
src/parser/interpreter/: environment.cpp  environment.hpp  interpreter.cpp  interpreter.hpp
src/parser/visitors/: AstPrinterVisitor.cpp  AstPrinterVisitor.hpp
test/: ast.cpp  test.gls
test/unit-tests/: gloss-tests.cpp  lexer-tests.cpp
